@@ -75,7 +75,7 @@
 #    define CONFIG_EXAMPLES_NXLINES_BGCOLOR RGB16_DARKGREEN
 #  else
 #    define CONFIG_EXAMPLES_NXLINES_BGCOLOR RGB8_DARKGREEN
-# endif
+#  endif
 #endif
 
 #ifndef CONFIG_EXAMPLES_NXLINES_LINEWIDTH
@@ -89,7 +89,31 @@
 #    define CONFIG_EXAMPLES_NXLINES_LINECOLOR RGB16_YELLOW
 #  else
 #    define CONFIG_EXAMPLES_NXLINES_LINECOLOR RGB8_YELLOW
-# endif
+#  endif
+#endif
+
+#ifndef CONFIG_EXAMPLES_NXLINES_BORDERWIDTH
+#  define CONFIG_EXAMPLES_NXLINES_BORDERWIDTH 16
+#endif
+
+#ifndef CONFIG_EXAMPLES_NXLINES_BORDERCOLOR
+#  if CONFIG_EXAMPLES_NXLINES_BPP == 24 || CONFIG_EXAMPLES_NXLINES_BPP == 32
+#    define CONFIG_EXAMPLES_NXLINES_BORDERCOLOR RGB24_YELLOW
+#  elif CONFIG_EXAMPLES_NXLINES_BPP == 16
+#    define CONFIG_EXAMPLES_NXLINES_BORDERCOLOR RGB16_YELLOW
+#  else
+#    define CONFIG_EXAMPLES_NXLINES_BORDERCOLOR RGB8_YELLOW
+#  endif
+#endif
+
+#ifndef CONFIG_EXAMPLES_NXLINES_CIRCLECOLOR
+#  if CONFIG_EXAMPLES_NXLINES_BPP == 24 || CONFIG_EXAMPLES_NXLINES_BPP == 32
+#    define CONFIG_EXAMPLES_NXLINES_CIRCLECOLOR RGB24_BEIGE
+#  elif CONFIG_EXAMPLES_NXLINES_BPP == 16
+#    define CONFIG_EXAMPLES_NXLINES_CIRCLECOLOR RGB16_BEIGE
+#  else
+#    define CONFIG_EXAMPLES_NXLINES_CIRCLECOLOR RGB8_YELLOW
+#  endif
 #endif
 
 /* Debug ********************************************************************/
